http://www.mbdyn.org

Copyright (C) 1996-2017

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added network byte order to drivers & element output streams
		- added width/format for eigenanalysis output files
		  (noted by Reinhard Resch)
	Backward compatibility issues:
		- got rid of adams and motionview output 
	Known issues:
	Bug fixes:
		- fixed (harmless?) off-by-one read in fixed step drive
		- fixed bugs in timestep control (Reinhard Resch)
		- fixed default max time step (Reinard Resch)

MBDyn 1.7.2
	Enhancements:
		- added contrib/Post (Marco Morandini)
		- added python input file pre-processing (Marco Morandini)
		- added support for Functional Mockup Interface (FMI) model
		  exchange and co-simulation standard (with the contribution
		  of Devyesh Tandon during Google Summer of Code 2016)
		- added "raw" variants of buffer drive and output elem
		- added private data to electric motor (Reinhard Resch)
		- added initial current to electric motor (Reinhard Resch)
		- added printing the CPU time used for each iteration
		  (Reinhard Resch)
		- reduce memory usage during initial assembly (Reinhard Resch)
		- added netcdf output for eigenanalysis (Andrea Zanoni)
		- added range checks to parsing (noted by Reinhard Resch)
		- added several improvements related to automatic
		  differentiation (Reinhard Resch)
		- updated support for CodeAster modal element database
		  generation (Reinhard Resch)
		- improved electric motor (Reinhard Resch)
		- improved module-hydrodynamic_plain_bearing (Reinhard Resch)
			1) Multiple Gauss Points can be used in combination
			   with axial movement of the shaft
			2) It is possible to have eccentricities larger than
			   one (Sommerfeld numbers are extrapolated linear).
			3) Output can be generated for selected Gauss points
			   only