@@ -15,6 +15,7 @@ MBDyn 1.X-Devel
 		- added network byte order to drivers & element output streams
 		- added width/format for eigenanalysis output files
 		  (noted by Reinhard Resch)
+		- added relative output of follower force/couple
 	Backward compatibility issues:
 		- got rid of adams and motionview output 
 	Known issues:
